--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
             <div class="splide__track">
               <ul class="splide__list">
                 <li class="splide__slide">
-                  <img src="assets/img/1.png" alt="">
+                  <img src="assets/img/1.png" alt="satu">
                 </li>
                 <li class="splide__slide">
-                  <img src="assets/img/2.png" alt="">
+                  <img src="assets/img/2.png" alt="dua">
                 </li>
                 <li class="splide__slide">
-                  <img src="assets/img/3.png" alt="">
+                  <img src="assets/img/3.png" alt="tiga">
                 </li>
 
             
